@@ -877,4 +877,4 @@ Configuration File
    ~/.config/tryton/x.y/known_hosts      # Fingerprints
    ~/.config/tryton/x.y/ca_certs         # Certification Authority (http://docs.python.org/library/ssl.html#ssl-certificates)
    ~/.config/tryton/x.y/profiles.cfg     # Profile configuration
-
+   ~/.config/tryton/x.y/plugins          # Local user plugins directory
